--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,14 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         POE-Component-Cron
-version:      0.015
+version:      0.016
 version_from: lib/POE/Component/Cron.pm
 installdirs:  site
 requires:
     DateTime:                      0
     DateTime::Event::Cron:         0
     DateTime::Event::Random:       0
+    POE:                           0
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.30
