Import of CFEDDE/POE-Component-Cron-0.019 from CPAN.
gitpan-cpan-distribution: POE-Component-Cron
gitpan-cpan-version:      0.019
gitpan-cpan-path:         CFEDDE/POE-Component-Cron-0.019.tar.gz
gitpan-cpan-author:       CFEDDE
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,17 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         POE-Component-Cron
-version:      0.018
-version_from: lib/POE/Component/Cron.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                POE-Component-Cron
+version:             0.019
+abstract:            Schedule POE Events using a cron spec
+license:             ~
+generated_by:        ExtUtils::MakeMaker version 6.36
+distribution_type:   module
+requires:     
     DateTime:                      0
     DateTime::Event::Cron:         0
     DateTime::Event::Random:       0
     POE:                           0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
+    version: 1.2
+author:
+    - Chris Fedde <cfedde@littleton.co.us>
